--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+html, body, h1, h2, h3, h4, h5, h6{
+    margin: 0;
+    padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 header{
     background-color: #46100e;
     padding: 20px;
