INDEX: CSS - main

--- a/index.css
+++ b/index.css
@@ -71,3 +71,11 @@ nav li a{
 nav li a.join{
     font-weight: 900;
 }
+
+main{
+    max-width: 100%;
+    width: 1200px;
+    margin: 80px auto;
+    padding: 0 40px;
+    box-sizing: border-box;
+}
