--- a/index.css
+++ b/index.css
@@ -70,6 +70,9 @@ nav li a{
     text-decoration: none;
     color: #fff;
 }
+nav li a:hover{
+    text-decoration: underline;
+}
 
 nav li a.join{
     font-weight: 900;
@@ -105,6 +108,10 @@ article p {
     width: 40%;
     margin: 20px 5%;
 }
+.images li:hover{
+    position: relative;
+    top: -4px;
+}
 .images li img{
     max-width: 100%;
 }
@@ -125,6 +132,10 @@ form input{
     font-size: 24px;
     border-radius: 28px;
     border: 4px solid white;
+}
+form input:focus{
+    border: 4px dashed #4b4b4b;
+    outline: none;
 }
 
 /* FOOTER */
