--- a/index.css
+++ b/index.css
@@ -137,6 +137,9 @@ form input:focus{
     border: 4px dashed #4b4b4b;
     outline: none;
 }
+form input:valid{
+    border: 4px solid #71d300;
+}
 
 /* FOOTER */
 footer{
