--- a/index.css
+++ b/index.css
@@ -37,11 +37,11 @@ header h1{
 }
 
 .banner .welcome{
-    background-color: #d62b0d;
+    background-color: #d62b0d80;
     color: white;
     position: absolute;
     left: 0;
-    top: 30%;
+    top: 50%;
 }
 
 .banner h2{
@@ -122,15 +122,19 @@ article p {
     top: -4px;
 }
 .images li img{
-    max-width: 100%;
+    max-height: 250px;
+    width: auto;
 }
 
 /* JOIN */
+a.join{
+    padding: 20px 60px;
+}
 .join{
     background: #f4f4f4;
     text-align: center;
-    padding: 20px 60px;
     color: #4b4b4b;
+    padding: 40px 0;
 }
 .join h2{
     font-size: 36px;
@@ -151,6 +155,17 @@ form input:focus{
 form input:valid{
     border: 4px solid #71d300;
 }
+button{
+    padding: 10px 20px;
+    border: none;
+    background-color: #46100e;
+    color: white;
+    border-radius: 12px;
+    font-weight: 900;
+}
+button:hover{
+    background-color: #953e3b;
+}
 
 /* FOOTER */
 footer{
@@ -158,4 +173,74 @@ footer{
     color: white;
     padding: 10px;
     text-align: center;
+}
+
+/* RESPONSIVE */
+@media only screen and (max-width: 1400px){
+    .banner .welcome h2{
+        font-size: 50px;
+        padding: 5rem;
+    }
+    nav li {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 960px){
+    .banner .welcome{
+        background-color: #d62b0d;
+    }
+    .banner .welcome h2{
+        font-size: 20px;
+    }
+    a.join{
+        color: white;
+        background: none;
+    }
+    header h1{
+        font-size: 14px;
+        border: 4px solid white;
+    }
+    form input{
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 960px){
+    .banner .welcome{
+        position: relative;
+        text-align: center;
+        padding: 10px;
+    }
+    .banner .welcome h2{
+        font-size: 25px;
+    }
+    .banner .welcome span{
+        font-size: 1em;
+    }
+    .images li{
+        width: 100%;
+        margin: 20px auto;
+        display: block;
+    }
+    .images li img {
+        max-height: none;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 960px){
+    nav{
+        top: 0;
+    }
+    nav li{
+        font-size: 20px;
+        display: block;
+        width: 100%;
+        margin: 12px 0;
+    }
+    header {
+        position: relative;
+        width: auto;
+    }
 }
